[gd_scene load_steps=9 format=4 uid="uid://dro8bl4hg7h83"]

[ext_resource type="TileSet" uid="uid://bh13re3510i6" path="res://tileset.tres" id="1_0ae8y"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_srlk4"]
[ext_resource type="PackedScene" uid="uid://ck2un6p41s835" path="res://main_ui.tscn" id="2_6oytq"]
[ext_resource type="PackedScene" uid="uid://behn8iohf5wxa" path="res://sushi.tscn" id="3_56gc3"]
[ext_resource type="PackedScene" uid="uid://dli8f6bemou61" path="res://ninja_and_camera.tscn" id="4_2dxlu"]
[ext_resource type="PackedScene" uid="uid://dj4t27jjwn8vs" path="res://cannon.tscn" id="6_jcaww"]
[ext_resource type="PackedScene" uid="uid://bssocgl1yfhce" path="res://platform.tscn" id="7_sco3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4x27"]

[node name="DemoLevel" type="Node2D"]
script = ExtResource("1_srlk4")

[node name="StartPoint" type="Node2D" parent="."]
position = Vector2(168, 296)

[node name="MainUI" parent="." instance=ExtResource("2_6oytq")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAYAAAAFAAAAAAAAAAcAAAAFAAAAAAAAAAgAAAAFAAAAAAAAAAkAAAAFAAAAAAACAAkAAAAEAAEAAAADAAkAAAADAAAAAAAEAAkAAAAEAAAAAAAFAAkAAAAEAAAAAAACAAYAAAAAAAAAAAADAAYAAAABAAAAAAADAAcAAAAFAAAAAAADAAgAAAAFAAAAAAACAAcAAAAEAAEAAAACAAgAAAAEAAEAAAAGAAkAAAAEAAAAAAAHAAkAAAAEAAAAAAAIAAkAAAAEAAAAAAAJAAkAAAACAAAAAAAJAAgAAAAEAAEAAAAJAAcAAAAEAAEAAAAJAAYAAAAAAAAAAAAKAAYAAAAEAAAAAAALAAYAAAAEAAAAAAAKAAcAAAAGAAEAAAALAAcAAAAGAAEAAAALAAgAAAAGAAEAAAALAAkAAAAGAAEAAAAKAAkAAAAGAAEAAAAKAAgAAAAGAAEAAAAKAAoAAAAGAAEAAAALAAoAAAAGAAEAAAAJAAoAAAAGAAEAAAAIAAoAAAAGAAEAAAAHAAoAAAAGAAEAAAAGAAoAAAAGAAEAAAAFAAoAAAAGAAEAAAAEAAoAAAAGAAEAAAADAAoAAAAGAAEAAAACAAoAAAAEAAEAAAAAAAoAAAAFAAAAAAAAAAsAAAAFAAAAAAACAAsAAAAAAAEAAAADAAsAAAAFAAEAAAAEAAsAAAAFAAEAAAAFAAsAAAAFAAEAAAAGAAsAAAAFAAEAAAAHAAsAAAAFAAEAAAAIAAsAAAACAAEAAAAJAAsAAAAGAAEAAAAKAAsAAAAGAAEAAAALAAsAAAAGAAEAAAAEAAgAAAAFAAMAAAAFAAgAAAAFAAMAAAAGAAgAAAAFAAMAAAAHAAgAAAAFAAMAAAAIAAgAAAAFAAMAAAAFAAYAAAAEAAQAAAAHAAYAAAAEAAQAAAAAAAEAAAADAAEAAAAAAAAAAAAGAAEAAAABAAAAAAAGAAEAAAACAAAAAAAGAAEAAAADAAAAAAAGAAEAAAAEAAAAAAAGAAEAAAAFAAAAAAADAAEAAAAGAAAAAAAFAAEAAAAHAAAAAAACAAEAAAAIAAAAAAAGAAEAAAAJAAAAAAAGAAEAAAAKAAAAAAAGAAEAAAAKAAEAAAAFAAEAAAAJAAEAAAAFAAEAAAAIAAEAAAAFAAEAAAAEAAEAAAAFAAEAAAADAAEAAAAFAAEAAAACAAEAAAAFAAEAAAABAAEAAAAFAAEAAAAFAAEAAAABAAEAAAAHAAEAAAAAAAEAAAALAAAAAAAGAAEAAAALAAEAAAAFAAEAAAAMAAYAAAAEAAAAAAANAAYAAAAEAAAAAAAOAAYAAAAEAAAAAAAMAAEAAAAFAAEAAAANAAEAAAAFAAEAAAAOAAEAAAAFAAEAAAAPAAYAAAACAAAAAAAPAAEAAAACAAEAAAAPAAIAAAAAAAEAAAAPAAUAAAAEAAEAAAAAAAUAAAAFAAAAAAAAAAQAAAAFAAAAAAAAAAMAAAAFAAAAAAAAAAIAAAAFAAAAAAAMAAAAAAAGAAEAAAANAAAAAAAGAAEAAAAOAAAAAAAGAAEAAAAPAAAAAAAGAAEAAAAQAAAAAAAGAAEAAAARAAAAAAAGAAEAAAARAAEAAAAGAAEAAAAQAAEAAAAGAAEAAAARAAIAAAAFAAEAAAAQAAIAAAAFAAEAAAAQAAUAAAAGAAEAAAAQAAYAAAAGAAEAAAARAAUAAAAGAAEAAAAMAAcAAAAGAAEAAAANAAcAAAAGAAEAAAAOAAcAAAAGAAEAAAAPAAcAAAAGAAEAAAAQAAcAAAAGAAEAAAARAAcAAAAGAAEAAAARAAYAAAAGAAEAAAAPAAQAAAAAAAAAAAAQAAQAAAAEAAAAAAARAAQAAAAEAAAAAAASAAQAAAAEAAAAAAASAAUAAAADAAEAAAASAAYAAAAFAAAAAAASAAcAAAAFAAAAAAASAAgAAAAFAAAAAAASAAkAAAAFAAAAAAASAAoAAAAFAAAAAAASAAsAAAAFAAAAAAASAAwAAAAFAAAAAAAVAAAAAAAGAAEAAAAVAAEAAAAGAAEAAAAVAAIAAAAFAAEAAAAVAAUAAAAAAAAAAAAVAAYAAAAEAAEAAAAVAAcAAAAEAAEAAAAVAAgAAAAEAAEAAAAVAAkAAAAEAAEAAAAVAAoAAAAEAAEAAAAVAAsAAAAEAAEAAAAVAAwAAAAEAAEAAAASAAIAAAAFAAEAAAATAAIAAAAFAAEAAAAUAAIAAAAFAAEAAAASAAAAAAAGAAEAAAASAAEAAAAGAAEAAAATAAAAAAAGAAEAAAATAAEAAAAGAAEAAAAUAAAAAAAGAAEAAAAUAAEAAAAGAAEAAAAWAAAAAAAGAAEAAAAWAAEAAAAGAAEAAAAWAAIAAAAFAAEAAAAWAAUAAAABAAAAAAAWAAYAAAAFAAAAAAAWAAcAAAAFAAAAAAAWAAgAAAAFAAAAAAAWAAkAAAAFAAAAAAAWAAoAAAAFAAAAAAAWAAsAAAAFAAAAAAAWAAwAAAAFAAAAAAAXAAAAAAAGAAEAAAAXAAEAAAAGAAEAAAAXAAIAAAAFAAEAAAAMABAAAAAEAAAAAAANABAAAAAEAAAAAAAOABAAAAAEAAAAAAAPABAAAAAEAAAAAAAQABAAAAAEAAAAAAARABAAAAAEAAAAAAASABAAAAAEAAAAAAATABAAAAAEAAAAAAAKABAAAAAEAAAAAAALABAAAAAEAAAAAAAKAA4AAAABAAEAAAAKAA0AAAAFAAAAAAAKAAwAAAADAAEAAAALAAwAAAAFAAEAAAAMAAwAAAAFAAEAAAANAAwAAAAFAAEAAAAOAAwAAAAFAAEAAAAPAAwAAAACAAEAAAAPAA0AAAAAAAEAAAAQAA0AAAAFAAEAAAARAA0AAAAFAAEAAAASAA0AAAABAAEAAAAVABAAAAACAAAAAAAVAA0AAAAEAAEAAAAVAA4AAAAEAAEAAAAVAA8AAAAEAAEAAAAUABAAAAAEAAAAAAAWAA0AAAAFAAAAAAAWAA4AAAAFAAAAAAAWAA8AAAAFAAAAAAAWABAAAAADAAAAAAAMAAgAAAAGAAEAAAAMAAkAAAAGAAEAAAAMAAoAAAAGAAEAAAAMAAsAAAAGAAEAAAANAAgAAAAGAAEAAAANAAkAAAAGAAEAAAANAAoAAAAGAAEAAAANAAsAAAAGAAEAAAAOAAgAAAAGAAEAAAAOAAkAAAAGAAEAAAAOAAoAAAAGAAEAAAAOAAsAAAAGAAEAAAAPAAgAAAAGAAEAAAAPAAkAAAAGAAEAAAAPAAoAAAAGAAEAAAAPAAsAAAAGAAEAAAAQAAgAAAAGAAEAAAAQAAkAAAAGAAEAAAAQAAoAAAAGAAEAAAAQAAsAAAAGAAEAAAARAAgAAAAGAAEAAAARAAkAAAAGAAEAAAARAAoAAAAGAAEAAAARAAsAAAAGAAEAAAAQAAwAAAAGAAEAAAARAAwAAAAGAAEAAAAAAAwAAAAFAAAAAAAAAA0AAAAFAAAAAAAAAA4AAAAFAAAAAAAAAA8AAAAFAAAAAAAAABAAAAAFAAAAAAAAABEAAAAFAAAAAAAAABIAAAAFAAAAAAAIAAwAAAAEAAEAAAAIAA0AAAAEAAEAAAAIAA4AAAAAAAEAAAAIABAAAAAAAAAAAAAIABEAAAAAAAEAAAAJAAwAAAAGAAEAAAAJAA0AAAAGAAEAAAAJAA4AAAAFAAEAAAAJABAAAAAEAAAAAAAJABEAAAAFAAEAAAAAABMAAAAFAAAAAAAAABQAAAADAAAAAAAAABUAAAAGAAEAAAABABQAAAAEAAAAAAABABUAAAAGAAEAAAACABQAAAABAAAAAAACABUAAAADAAAAAAADABQAAAAFAAMAAAADABUAAAAEAAAAAAAEABQAAAAFAAMAAAAEABUAAAAEAAAAAAAFABQAAAAFAAMAAAAFABUAAAAEAAAAAAAGABQAAAAAAAAAAAAGABUAAAACAAAAAAAHABQAAAABAAAAAAAHABUAAAADAAAAAAAIABUAAAAEAAAAAAAJABUAAAAEAAAAAAAKABEAAAAFAAEAAAAKABUAAAAEAAAAAAALABEAAAAFAAEAAAALABUAAAAEAAAAAAAMABEAAAAFAAEAAAAMABUAAAAEAAAAAAANABEAAAAFAAEAAAANABUAAAAEAAAAAAAOABEAAAAFAAEAAAAOABUAAAAEAAAAAAAPABEAAAAFAAEAAAAPABUAAAAEAAAAAAAQABEAAAAFAAEAAAAQABUAAAAEAAAAAAARABEAAAAFAAEAAAARABUAAAAEAAAAAAASABEAAAAFAAEAAAASABUAAAAEAAAAAAATABEAAAAFAAEAAAATABUAAAAEAAAAAAAUABEAAAAFAAEAAAAUABUAAAAEAAAAAAAVABEAAAAFAAEAAAAVABUAAAAEAAAAAAAWABEAAAACAAEAAAAWABIAAAAEAAEAAAAWABMAAAAEAAEAAAAWABQAAAAEAAEAAAAWABUAAAACAAAAAAAXABEAAAAGAAEAAAAXABIAAAAGAAEAAAAXABMAAAAGAAEAAAAXABQAAAAGAAEAAAAXABUAAAAGAAEAAAAYAAAAAAAGAAEAAAAYAAEAAAAGAAEAAAAYAAIAAAAFAAEAAAAYABEAAAAGAAEAAAAYABIAAAAGAAEAAAAYABMAAAAGAAEAAAAYABQAAAAGAAEAAAAYABUAAAAGAAEAAAAZAAAAAAAGAAEAAAAZAAEAAAAGAAEAAAAZAAIAAAAFAAEAAAAZABEAAAAGAAEAAAAZABIAAAAGAAEAAAAZABMAAAAGAAEAAAAZABQAAAAGAAEAAAAZABUAAAAGAAEAAAAaAAAAAAAGAAEAAAAaAAEAAAAGAAEAAAAaAAIAAAAFAAEAAAAaABEAAAAGAAEAAAAaABIAAAAGAAEAAAAaABMAAAAGAAEAAAAaABQAAAAGAAEAAAAaABUAAAAGAAEAAAAbAAAAAAAGAAEAAAAbAAEAAAAGAAEAAAAbAAIAAAACAAEAAAAbAAMAAAAEAAEAAAAbAAQAAAAEAAEAAAAbAAUAAAAEAAEAAAAbAAYAAAAEAAEAAAAbAAcAAAAEAAEAAAAbAAgAAAAEAAEAAAAbAAkAAAAEAAEAAAAbAAoAAAAEAAEAAAAbAAsAAAAEAAEAAAAbAAwAAAAEAAEAAAAbAA0AAAAEAAEAAAAbAA4AAAAAAAEAAAAbABEAAAAGAAEAAAAbABIAAAAGAAEAAAAbABMAAAAGAAEAAAAbABQAAAAGAAEAAAAbABUAAAAGAAEAAAAcAAAAAAAGAAEAAAAcAAEAAAAGAAEAAAAcAAIAAAAGAAEAAAAcAAMAAAAGAAEAAAAcAAQAAAAGAAEAAAAcAAUAAAAGAAEAAAAcAAYAAAAGAAEAAAAcAAcAAAAGAAEAAAAcAAgAAAAGAAEAAAAcAAkAAAAGAAEAAAAcAAoAAAAGAAEAAAAcAAsAAAAGAAEAAAAcAAwAAAAGAAEAAAAcAA0AAAAGAAEAAAAcAA4AAAAFAAEAAAAcABEAAAAGAAEAAAAcABIAAAAGAAEAAAAcABMAAAAGAAEAAAAcABQAAAAGAAEAAAAcABUAAAAGAAEAAAAdAAAAAAAGAAEAAAAdAAEAAAAGAAEAAAAdAAIAAAAGAAEAAAAdAAMAAAAGAAEAAAAdAAQAAAAGAAEAAAAdAAUAAAAGAAEAAAAdAAYAAAAGAAEAAAAdAAcAAAAGAAEAAAAdAAgAAAAGAAEAAAAdAAkAAAAGAAEAAAAdAAoAAAAGAAEAAAAdAAsAAAAGAAEAAAAdAAwAAAAGAAEAAAAdAA0AAAAGAAEAAAAdAA4AAAAFAAEAAAAdABEAAAAGAAEAAAAdABIAAAAGAAEAAAAdABMAAAAGAAEAAAAdABQAAAAGAAEAAAAdABUAAAAGAAEAAAAeAAAAAAAGAAEAAAAeAAEAAAAGAAEAAAAeAAIAAAAGAAEAAAAeAAMAAAAGAAEAAAAeAAQAAAAGAAEAAAAeAAUAAAAGAAEAAAAeAAYAAAAGAAEAAAAeAAcAAAAGAAEAAAAeAAgAAAAGAAEAAAAeAAkAAAAGAAEAAAAeAAoAAAAGAAEAAAAeAAsAAAAGAAEAAAAeAAwAAAAGAAEAAAAeAA0AAAAGAAEAAAAeAA4AAAACAAEAAAAeAA8AAAAEAAEAAAAeABAAAAACAAAAAAAeABEAAAAGAAEAAAAeABIAAAAGAAEAAAAeABMAAAAGAAEAAAAeABQAAAAGAAEAAAAeABUAAAAGAAEAAAATAAQAAAABAAAAAAATAAUAAAABAAEAAAAPAA4AAAAEAAIAAAAQAA4AAAAEAAIAAAARAA4AAAAEAAIAAAASAA4AAAAEAAIAAAAMAA4AAAAFAAQAAAANAA4AAAAFAAQAAAAKAAQAAAAFAAQAAAALAAQAAAAFAAQAAAAMAAQAAAAFAAQAAAAXABAAAAAEAAAAAAAYABAAAAAEAAAAAAAZABAAAAAEAAAAAAAaABAAAAAEAAAAAAAGABAAAAAEAAQAAAAEABEAAAAEAAQAAAADAA4AAAAEAAQAAAAbABAAAAAEAAAAAAAcABAAAAAEAAAAAAAdABAAAAAEAAAAAAA=")
tile_set = ExtResource("1_0ae8y")

[node name="Ninja" parent="." instance=ExtResource("4_2dxlu")]

[node name="Sushies" type="Node" parent="."]

[node name="Sushi3" parent="Sushies" instance=ExtResource("3_56gc3")]
position = Vector2(224, 40)

[node name="Sushi2" parent="Sushies" instance=ExtResource("3_56gc3")]
position = Vector2(120, 88)

[node name="Sushi" parent="Sushies" instance=ExtResource("3_56gc3")]
position = Vector2(88, 88)

[node name="Cannons" type="Node" parent="."]

[node name="Cannon4" parent="Cannons" instance=ExtResource("6_jcaww")]
position = Vector2(168, 56)
delay = 1.5

[node name="Cannon3" parent="Cannons" instance=ExtResource("6_jcaww")]
position = Vector2(104, 24)
direction = "down"
delay = 1.5

[node name="Triggers" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="Triggers"]
position = Vector2(352, 176)
metadata/level_filename = "res://levels/level_0_0.tscn"
metadata/level_name = "0-0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/Area2D"]
position = Vector2(120, 72)
shape = SubResource("RectangleShape2D_u4x27")

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("7_sco3p")]
position = Vector2(56, 64)
offset = Vector2(40, 0)

[node name="Platform2" parent="Platforms" instance=ExtResource("7_sco3p")]
position = Vector2(376, 128)
offset = Vector2(0, 96)

[connection signal="on_hp_changed" from="Ninja" to="." method="_on_ninja_on_hp_changed"]
[connection signal="on_collected" from="Sushies/Sushi3" to="." method="_on_sushi_on_collected"]
[connection signal="on_collected" from="Sushies/Sushi2" to="." method="_on_sushi_on_collected"]
[connection signal="on_collected" from="Sushies/Sushi" to="." method="_on_sushi_on_collected"]
[connection signal="on_collected" from="Cannons/Cannon4" to="." method="_on_sushi_on_collected"]
[connection signal="on_collected" from="Cannons/Cannon3" to="." method="_on_sushi_on_collected"]
[connection signal="area_entered" from="Triggers/Area2D" to="." method="_on_area_2d_area_entered"]
