[gd_scene load_steps=18 format=4 uid="uid://3u51h8ocju7g"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_gx77k"]
[ext_resource type="TileSet" uid="uid://bh13re3510i6" path="res://tileset.tres" id="2_isgy4"]
[ext_resource type="PackedScene" uid="uid://ck2un6p41s835" path="res://main_ui.tscn" id="3_10a5x"]
[ext_resource type="PackedScene" uid="uid://dli8f6bemou61" path="res://ninja_and_camera.tscn" id="4_dsofp"]
[ext_resource type="Script" path="res://levels/trigger_game_finished.gd" id="5_y52q0"]
[ext_resource type="PackedScene" uid="uid://bssocgl1yfhce" path="res://platform.tscn" id="6_dqw5u"]
[ext_resource type="PackedScene" uid="uid://dfiyvautxo6h7" path="res://menu/menu_label.tscn" id="6_sgfcs"]
[ext_resource type="Script" path="res://levels/start_battle.gd" id="7_0gdgh"]
[ext_resource type="Texture2D" uid="uid://ckbj4uabb1dpy" path="res://art/platform.png" id="7_khfbi"]
[ext_resource type="Script" path="res://levels/final_boss_door.gd" id="7_ros3k"]
[ext_resource type="PackedScene" uid="uid://c6ida8klo37cc" path="res://sensei.tscn" id="10_h1ydx"]
[ext_resource type="AudioStream" uid="uid://bwx0wuk7m057" path="res://music/level_boss.ogg" id="12_tnmhl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ggbi"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmgup"]
size = Vector2(82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3eyy"]
atlas = ExtResource("7_khfbi")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgf4a"]
size = Vector2(16, 48)

[sub_resource type="Curve2D" id="Curve2D_vatqf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 544, 136, 0, 0, 0, 0, 512, 104, 0, 0, 0, 0, 544, 56)
}
point_count = 3

[node name="Level-BOSS" type="Node2D"]
script = ExtResource("1_gx77k")

[node name="StartPoint" type="Node2D" parent="."]
position = Vector2(96, 80)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAYAAAAEAAAAAAABAAYAAAAEAAAAAAACAAYAAAAEAAAAAAADAAYAAAAEAAAAAAAEAAYAAAAEAAAAAAAFAAYAAAAEAAAAAAAGAAYAAAAEAAAAAAAHAAYAAAAEAAAAAAAIAAYAAAAEAAAAAAAJAAYAAAAEAAAAAAAKAAYAAAAEAAAAAAALAAYAAAAEAAAAAAAMAAYAAAAEAAAAAAANAAYAAAAEAAAAAAAOAAYAAAAEAAAAAAAPAAYAAAAEAAAAAAAQAAYAAAAEAAAAAAARAAYAAAAEAAAAAAASAAYAAAABAAAAAAASAAcAAAAFAAAAAAASAAgAAAAFAAAAAAASAAkAAAAFAAAAAAASAAoAAAAFAAAAAAASAAsAAAAFAAAAAAASAAwAAAADAAAAAAATAAwAAAAEAAAAAAAUAAwAAAAEAAAAAAAVAAwAAAAEAAAAAAAWAAwAAAAEAAAAAAAXAAwAAAAEAAAAAAAYAAwAAAAEAAAAAAAZAAwAAAAEAAAAAAAaAAwAAAAEAAAAAAAbAAwAAAAEAAAAAAAcAAwAAAAEAAAAAAAdAAwAAAAEAAAAAAAeAAwAAAAEAAAAAAAfAAwAAAAEAAAAAAAgAAwAAAAEAAAAAAAhAAwAAAAEAAAAAAAiAAwAAAAEAAAAAAAjAAwAAAAEAAAAAAAkAAwAAAACAAAAAAAkAAsAAAAEAAEAAAAkAAoAAAAEAAEAAAAkAAkAAAAEAAEAAAAkAAgAAAAEAAEAAAAkAAcAAAAEAAEAAAAkAAYAAAAEAAEAAAAkAAUAAAAEAAEAAAAkAAQAAAAAAAAAAAAlAAAAAAAFAAEAAAAkAAAAAAAFAAEAAAAjAAAAAAAFAAEAAAAiAAAAAAAFAAEAAAAhAAAAAAAFAAEAAAAgAAAAAAAFAAEAAAAfAAAAAAAFAAEAAAAeAAAAAAAFAAEAAAAdAAAAAAAFAAEAAAAcAAAAAAAFAAEAAAAbAAAAAAAFAAEAAAAaAAAAAAAFAAEAAAAZAAAAAAAFAAEAAAAYAAAAAAAFAAEAAAAXAAAAAAAFAAEAAAAWAAAAAAAFAAEAAAAVAAAAAAAFAAEAAAAUAAAAAAAFAAEAAAATAAAAAAAFAAEAAAASAAAAAAAFAAEAAAARAAAAAAAFAAEAAAAQAAAAAAAFAAEAAAAPAAAAAAAFAAEAAAAOAAAAAAAFAAEAAAANAAAAAAAFAAEAAAAMAAAAAAAFAAEAAAALAAAAAAAFAAEAAAAKAAAAAAAFAAEAAAAJAAAAAAAFAAEAAAAIAAAAAAAFAAEAAAAHAAAAAAAFAAEAAAAGAAAAAAAFAAEAAAAFAAAAAAAFAAEAAAAEAAAAAAAFAAEAAAADAAAAAAAFAAEAAAACAAAAAAAFAAEAAAABAAAAAAAFAAEAAAAAAAAAAAAFAAEAAAD//wAAAAADAAEAAAD//wYAAAADAAAAAAD//wQAAAAFAAAAAAD//wMAAAAFAAAAAAD//wIAAAAFAAAAAAD//wEAAAAFAAAAAAD//wUAAAAFAAAAAAATAAkAAAAEAAQAAAAUAAsAAAAFAAMAAAAVAAsAAAAFAAMAAAAWAAsAAAAFAAMAAAAXAAsAAAAFAAMAAAAYAAsAAAAFAAMAAAAZAAsAAAAFAAMAAAAaAAsAAAAFAAMAAAAbAAsAAAAFAAMAAAAcAAsAAAAFAAMAAAAdAAsAAAAFAAMAAAAeAAsAAAAFAAMAAAAfAAsAAAAFAAMAAAAgAAsAAAAFAAMAAAAhAAsAAAAFAAMAAAAiAAsAAAAFAAMAAAAjAAsAAAAFAAMAAAAVAAcAAAAEAAQAAAAWAAcAAAAEAAQAAAAXAAcAAAAEAAQAAAAiAAQAAAAEAAQAAAAhAAQAAAAEAAQAAAAlAAQAAAAEAAAAAAAmAAQAAAAEAAAAAAAnAAQAAAAEAAAAAAAoAAQAAAAEAAAAAAApAAQAAAAEAAAAAAAqAAQAAAAEAAAAAAArAAQAAAAEAAAAAAAsAAQAAAAEAAAAAAAtAAQAAAAEAAAAAAAnAAAAAAAFAAEAAAAoAAAAAAAFAAEAAAApAAAAAAAFAAEAAAAqAAAAAAAFAAEAAAArAAAAAAAFAAEAAAAsAAAAAAAFAAEAAAAtAAAAAAAFAAEAAAAmAAAAAAAFAAEAAAAuAAAAAAACAAEAAAAuAAQAAAACAAAAAAAuAAMAAAAEAAEAAAAuAAIAAAAEAAEAAAAuAAEAAAAEAAEAAAATAAsAAAAFAAMAAAAfAAcAAAAEAAQAAAAgAAcAAAAEAAQAAAAhAAkAAAAEAAQAAAAiAAkAAAAEAAQAAAASAAQAAAAEAAQAAAASAAMAAAAEAAQAAAASAAIAAAAEAAQAAAASAAEAAAAEAAQAAAATAAYAAAAEAAQAAAA=")
tile_set = ExtResource("2_isgy4")

[node name="MainUI" parent="." instance=ExtResource("3_10a5x")]

[node name="Ninja" parent="." instance=ExtResource("4_dsofp")]

[node name="Triggers" type="Node" parent="."]

[node name="NextScene" type="Area2D" parent="Triggers"]
position = Vector2(736, 40)
script = ExtResource("5_y52q0")
metadata/level_filename = "res://the_end.tscn"
metadata/level_name = ""
metadata/no_wait = true
metadata/savename = "level_boss"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/NextScene"]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_0ggbi")

[node name="MenuLabel" parent="Triggers/NextScene" instance=ExtResource("6_sgfcs")]
position = Vector2(-136, -8)
label_text = "Congrats >>>"

[node name="StartBattle" type="Area2D" parent="Triggers"]
position = Vector2(-16, 0)
script = ExtResource("7_0gdgh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/StartBattle"]
position = Vector2(256, 56)
shape = SubResource("RectangleShape2D_qmgup")

[node name="TextHelp" type="Node" parent="."]

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("6_dqw5u")]
position = Vector2(416, 88)
offset = Vector2(0, 72)
speed = 15

[node name="Door" type="Node2D" parent="."]
z_index = -100
position = Vector2(584, 40)
script = ExtResource("7_ros3k")

[node name="Sprite2D" type="Sprite2D" parent="Door"]
rotation = 1.5708
texture = SubResource("AtlasTexture_e3eyy")

[node name="RigidBody2D" type="RigidBody2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/RigidBody2D"]
shape = SubResource("RectangleShape2D_qgf4a")

[node name="Sensei" parent="." instance=ExtResource("10_h1ydx")]
position = Vector2(512, 80)

[node name="SenseiPoints" type="Path2D" parent="."]
position = Vector2(16, 0)
curve = SubResource("Curve2D_vatqf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_tnmhl")
autoplay = true
parameters/looping = false

[connection signal="on_hp_changed" from="Ninja" to="." method="_on_ninja_on_hp_changed"]
[connection signal="area_entered" from="Triggers/NextScene" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Triggers/StartBattle" to="Triggers/StartBattle" method="_on_area_entered"]
[connection signal="on_died" from="Sensei" to="Door" method="_on_sensei_on_died"]
